--- a/package.json
+++ b/package.json
@@ -52,14 +52,13 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "@neondatabase/serverless": "latest",
-    "dotenv": "latest"
+    "@radix-ui/progress": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
